K8S/bookservice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookservice
  template:
    metadata:
      labels:
        app: bookservice
    spec:
      containers:
        - name: bookservice
          image: katja1619/bookservice:v1.0.3
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: bookservice
spec:
  selector:
    app: bookservice
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
