K8S/libraryservice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libraryservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: libraryservice
  template:
    metadata:
      labels:
        app: libraryservice
    spec:
      containers:
        - name: libraryservice
          image: katja1619/libraryservice:v1.0.4
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: libraryservice
spec:
  selector:
    app: libraryservice
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
